@@ -58,7 +58,7 @@ public interface ILevel0IndefiniteArrayOperator<I,T>
     public <K,V> ILevel0MapOperator<I,K,V[]> toGroupMapOf(final Type<V> valueType, final IFunction<? super T,Map.Entry<K,V>> mapBuilder);
 
     
-    public ILevel0MapOperator<I,T,T> toMapByAlternateElements();
+    public ILevel0MapOperator<I,T,T> couple();
 
     public <K> ILevel0MapOperator<I,K,T> zipKeys(final K... keys);
     public <V> ILevel0MapOperator<I,T,V> zipValues(final V... values);
