@@ -317,7 +317,7 @@ public class MathFuncsTest extends TestCase {
 		
 		Map<String, List<Integer>> mapOfIntegerList = 
 		    Op.onListFor("first", Arrays.asList(34, 76, -12, 0, 67, null), "second", Arrays.asList(3, 776, -122, 20, 627)).
-				toMapByAlternateElements().of(Types.STRING, Types.LIST_OF_INTEGER).get();
+				couple().of(Types.STRING, Types.LIST_OF_INTEGER).get();
 
 //		Op.onMapOfList(mapOfIntegerList)
 //			.put("third", Arrays.asList(3, null, 776))
